# skills-radar

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PORTFOLIO-ARTICLE.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  context-engineering.md  conventions-requires-tools.md  hub-tags-taxonomy.md  onboarding.md  pypi-trusted-publishing-setup.md  threat-model.md  writing-skills.md
drafts/from-the-field/: skill-radar-launch-EN.md  skill-radar-launch-PL.md
examples/: .mcp.json  config.yaml.example
src/skill_radar/: __init__.py  app.py  cli.py  config.py  indexer.py  mcp_server.py  mini_index.py  rewriter.py  sanitize.py  store.py  watcher.py
src/skills_radar/: __init__.py  app.py  cli.py  config.py  embedder.py  faiss_store.py  github_import.py  indexer.py  injection_scanner.py  mcp_server.py  mini_index.py  qdrant_store.py  reranker.py  rewriter.py  sandbox.py  sanitize.py  signing.py  telemetry.py  tui.py  watcher.py
tests/: test_conditional_activation.py  test_injection_scanner.py  test_integration.py  test_mini_index.py  test_multi_kind.py  test_reject_untrusted.py  test_reranker.py  test_rewriter.py  test_sandbox.py  test_signing.py  test_smoke.py
