[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skills-radar"
version = "0.3.0a1"
description = "Lazy-loading skill discovery for Claude Code via MCP - mirrors Anthropic's Tool Search Tool pattern for Skills."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Dariusz Kowalski", email = "d.kowalski@sdet.it" },
]
keywords = [
    "claude-code",
    "claude",
    "anthropic",
    "mcp",
    "model-context-protocol",
    "skills",
    "rag",
    "context-engineering",
    "ai-agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.12.4",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2.2",
    "chromadb>=0.5",
    "watchdog>=4.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
mlx = ["mlx>=0.15", "mlx-lm>=0.14", "mlx-embeddings>=0.0.3"]
qdrant = ["qdrant-client>=1.10"]
voyage = ["voyageai>=0.2"]
openai = ["openai>=1.30"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "black>=24.0",
]

[project.scripts]
skills-radar = "skills_radar.cli:app"

[project.urls]
Homepage = "https://github.com/dar-kow/skills-radar"
Documentation = "https://github.com/dar-kow/skills-radar/tree/main/docs"
Repository = "https://github.com/dar-kow/skills-radar"
Issues = "https://github.com/dar-kow/skills-radar/issues"
Changelog = "https://github.com/dar-kow/skills-radar/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/skills_radar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "ANN", "S", "T20"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=skills_radar --cov-report=term-missing"
